@@ -8,11 +8,13 @@ from .models import AdjacencyListModel, NestedSetModel
 class AdjacencyListModelAdmin(HierarchicalModelAdmin):
 
     hierarchy = True
+    search_fields = ['title']
 
 
 class NestedSetModelModelAdmin(HierarchicalModelAdmin):
 
     hierarchy = NestedSet()
+    search_fields = ['title']
 
 
 admin.site.register(AdjacencyListModel, AdjacencyListModelAdmin)
